update for some service (notif, user, login, and register)
